<resources>
    <string name="app_name">CloudBookReader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_reading">闲读</string>
    <string name="daily_recommend">每日推荐</string>
    <string name="hot_rank_list">热映榜</string>
    <string name="author">作者：</string>
    <string name="short_desc">简介：</string>
    <string name="recommend">推荐</string>
    <string name="recently_viewed">最近常看</string>
    <string name="more">更多</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="remainning_rate">读者留存：</string>
    <string name="is_readding">人在追</string>

    <!--阅读页面相关-->
    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_alreday_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="net_error">网络异常</string>
    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不了</string>
    <string name="brief_introduction">简介：</string>
    <string name="category">类型：</string>
    <string name="charater_count">字数：</string>
    <string name="share">分享</string>
    <string name="download">下载</string>
    <string name="reading">阅读</string>
    <string name="collect">收藏</string>
    <string name="plot_desc">剧情简介</string>
    <string name="hot_comment">热门书评</string>
    <string name="recommend_book_list">推荐书单</string>
    <string name="begin_reading">开始阅读</string>
    <string name="add_to_bookshelf">加入书架</string>
    <string name="book_community">书籍社区</string>

</resources>
