<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.youth.banner.Banner
        android:id="@+id/image_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/img_two_bi_one"
        app:image_scale_type="center_crop"
        app:indicator_drawable_selected="@drawable/banner_red"
        app:indicator_drawable_unselected="@drawable/banner_grey"
        app:indicator_height="9dp"
        app:indicator_margin="3dp"
        app:indicator_width="9dp"
        app:is_auto_play="true"
        />

    <RelativeLayout
        android:id="@+id/personal_recommend"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/image_banner"
        android:layout_gravity="center_vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="35dp">


            <ImageButton
                android:id="@+id/ib_xiandu"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/home_middle_fm"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ib_xiandu"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/free_reading"
                android:textColor="@color/colorContent"
                android:textSize="12sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <FrameLayout
                android:id="@+id/fl_everyday"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:clickable="true">

                <ImageView
                    android:id="@+id/daily_btn"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:background="@drawable/home_middle_day"/>

                <TextView
                    android:id="@+id/tv_daily_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="xx"
                    android:textColor="@drawable/select_everyday"
                    android:textSize="25sp"/>

            </FrameLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_everyday"
                android:layout_marginTop="8dp"
                android:text="@string/daily_recommend"
                android:textColor="@color/colorContent"
                android:textSize="12sp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp">


            <ImageButton
                android:id="@+id/ib_movie_hot"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:background="@drawable/home_middle_rank"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ib_movie_hot"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/hot_rank_list"
                android:textColor="@color/colorContent"
                android:textSize="12sp"/>

        </RelativeLayout>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_below="@+id/personal_recommend"
        android:layout_marginTop="13dp"
        android:background="@color/colorHomeLine"/>


</RelativeLayout>